// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render the Header 1`] = `
[
  <div
    className="header"
  >
    <div
      className="img-container"
    >
      <img
        alt="Logo de l'aafm"
        className="logo-img"
        src=""
      />
    </div>
    <div
      className="title-container"
    >
      <h1>
        Association de l'amitie Franco-Marocaine de Grigny
      </h1>
    </div>
    <div
      className="nav-burger nav-burger-close"
      onClick={[Function]}
    />
    <div
      className="nav-desktop-filler"
    />
    <hr
      className="nav-desktop-line"
    />
    <div
      className="nav-container-desktop"
    >
      <nav>
        <ul
          className="nav-desktop-element-container"
        >
          <li
            className="nav-desktop-element"
          >
            <a
              className="nav-desktop-link"
              href="/"
            >
              <div
                className="nav-desktop-link-container"
              >
                home
              </div>
            </a>
          </li>
          <li
            className="nav-desktop-element"
          >
            <a
              className="nav-desktop-link"
              href="/link1"
            >
              <div
                className="nav-desktop-link-container"
              >
                test1
              </div>
            </a>
          </li>
          <li
            className="nav-desktop-element"
          >
            <a
              className="nav-desktop-link"
              href="/link2"
            >
              <div
                className="nav-desktop-link-container"
              >
                test2
              </div>
            </a>
          </li>
        </ul>
      </nav>
    </div>
  </div>,
  <div
    className="footer-container"
  >
    <div
      className="footer-top-container"
    >
      <div
        className="link-container"
      >
        <ul
          className="link-list"
        >
          <li
            className="link-list-element"
          >
            <a
              className="link-link"
              href="/"
            >
              <div
                className="link-content"
              >
                home
              </div>
            </a>
          </li>
          <li
            className="link-list-element"
          >
            <a
              className="link-link"
              href="/test"
            >
              <div
                className="link-content"
              >
                test
              </div>
            </a>
          </li>
        </ul>
      </div>
      <div
        className="moto-container"
      >
        <div
          className="moto-text"
        >
          <p>
            Phrase d'accroche assez longue ... 
            <br />
             sur 2 
            <br />
            ou 3 lignes
          </p>
        </div>
        <div
          className="moto-logo-container"
        >
          <img
            alt="logo de l'association de l'amitie franco-marocaine de grigny"
            className="moto-logo"
            src=""
          />
        </div>
      </div>
    </div>
    <div
      className="social-network"
    >
      <span
        className="social-network-text"
      >
        Retrouvez nous sur : 
      </span>
      <div
        className="social-links"
      >
        <a
          href=""
        >
          <img
            alt="logo du reseau social"
            className="social-logo"
            src=""
          />
        </a>
        <a
          href=""
        >
          <img
            alt="logo du reseau social"
            className="social-logo"
            src=""
          />
        </a>
        <a
          href=""
        >
          <img
            alt="logo du reseau social"
            className="social-logo"
            src=""
          />
        </a>
      </div>
    </div>
    <div
      className="copyright-container"
    >
      <div
        className="copyright-left"
      >
        <span>
          Association de l'amitiée Franco - Marocaine de Grigny
        </span>
      </div>
      <div
        className="copyright-separator"
      />
      <div
        className="copyright-right"
      >
        <span>
          Réaliser par : 
          <a
            className="copyright-link"
            href="http://gdeb.fr"
            target="_blank"
          >
            Guillaume DEBUCQUET
          </a>
        </span>
      </div>
    </div>
  </div>,
]
`;

exports[`changes the class when hovered 1`] = `
[
  <div
    className="header"
  >
    <div
      className="img-container"
    >
      <img
        alt="Logo de l'aafm"
        className="logo-img"
        src=""
      />
    </div>
    <div
      className="title-container"
    >
      <h1>
        Association de l'amitie Franco-Marocaine de Grigny
      </h1>
    </div>
    <div
      className="nav-burger nav-burger-close"
      onClick={[Function]}
    />
    <div
      className="nav-desktop-filler"
    />
  </div>,
  <hr
    className="nav-desktop-line"
  />,
  <div
    className="nav-container-desktop"
  >
    <nav>
      <ul
        className="nav-desktop-element-container"
      >
        <li
          className="nav-desktop-element"
        >
          <a
            className="nav-desktop-link"
            href="/"
          >
            <div
              className="nav-desktop-link-container"
            >
              home
            </div>
          </a>
        </li>
      </ul>
    </nav>
  </div>,
  <div
    className="footer-container"
  >
    <div
      className="footer-top-container"
    >
      <div
        className="link-container"
      >
        <ul
          className="link-list"
        >
          <li
            className="link-list-element"
          >
            <a
              className="link-link"
              href="/"
            >
              <div
                className="link-content"
              >
                home
              </div>
            </a>
          </li>
          <li
            className="link-list-element"
          >
            <a
              className="link-link"
              href="/test"
            >
              <div
                className="link-content"
              >
                test
              </div>
            </a>
          </li>
        </ul>
      </div>
      <div
        className="moto-container"
      >
        <div
          className="moto-text"
        >
          <p>
            Phrase d'accroche assez longue ... 
            <br />
             sur 2 
            <br />
            ou 3 lignes
          </p>
        </div>
        <div
          className="moto-logo-container"
        >
          <img
            alt="logo de l'association de l'amitie franco-marocaine de grigny"
            className="moto-logo"
            src=""
          />
        </div>
      </div>
    </div>
    <div
      className="social-network"
    >
      <span
        className="social-network-text"
      >
        Retrouvez nous sur : 
      </span>
      <div
        className="social-links"
      >
        <a
          href=""
        >
          <img
            alt="logo du reseau social"
            className="social-logo"
            src=""
          />
        </a>
        <a
          href=""
        >
          <img
            alt="logo du reseau social"
            className="social-logo"
            src=""
          />
        </a>
        <a
          href=""
        >
          <img
            alt="logo du reseau social"
            className="social-logo"
            src=""
          />
        </a>
      </div>
    </div>
    <div
      className="copyright-container"
    >
      <div
        className="copyright-left"
      >
        <span>
          Association de l'amitiée Franco - Marocaine de Grigny
        </span>
      </div>
      <div
        className="copyright-separator"
      />
      <div
        className="copyright-right"
      >
        <span>
          Réaliser par : 
          <a
            className="copyright-link"
            href="http://gdeb.fr"
            target="_blank"
          >
            Guillaume DEBUCQUET
          </a>
        </span>
      </div>
    </div>
  </div>,
]
`;
